[package]
name = "geetest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
form_urlencoded = "1"
serde_qs = "0.8"
thiserror = "1"
serde_json = "1"
futures-util = "0.3"
rand = { version = "0.8", features = ["alloc"] }
md5 = "0.7.0"
sha2 = "0.9.5"
hmac = "0.11.0"
log = "0.4.14"
env_logger = "0.9.0"
hyper-tls = "0.5.0"
async-stream = "0.3.2"
