[package]
name = "geetest"
authors = ["Konstantin Stepanov <konstantin.s@p2p.org>"]
readme = "README.md"
categories = ["api-bindings"]
keywords = ["geetest", "captcha", "server", "client", "api"]
license-file = "LICENSE"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
hyper = { version = "0.14", features = ["server", "client", "http1"] }
tokio = "1"
form_urlencoded = "1"
serde_qs = "0.8"
thiserror = "1"
serde_json = "1"
futures-util = "0.3"
rand = { version = "0.8", features = ["alloc"] }
md5 = { version = "0.7.0", optional = true }
sha2 = { version = "0.9.5", optional = true }
hmac = { version = "0.11.0", optional = true }
log = "0.4.14"
env_logger = "0.9.0"
hyper-tls = "0.5.0"

[features]
digest-md5 = ["md5"]
digest-sha256 = ["sha2"]
digest-hmac-sha256 = ["sha2", "hmac"]
default = ["digest-md5", "digest-sha256", "digest-hmac-sha256"]

[dev-dependencies]
async-stream = "0.3.2"
hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
